# Text-to-speech

./: edge_tts_wrapper.py  edge_tts_wrapper.spec  index.html  package-lock.json  package.json  test_api.py  vercel.json  vite.config.ts
api/: hello.js  hello.py  tts.js  tts.py
public/: manifest.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
